--- a/MovieExplorer.Droid/Resources/layout/Detail.axml
+++ b/MovieExplorer.Droid/Resources/layout/Detail.axml
@@ -1,75 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:rowCount="9"
-    android:columnCount="2"
     android:orientation="vertical"
-    android:layout_margin="10dp">
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:layout_marginRight="10dp"
-        android:id="@+id/movieImage"
-        android:scaleType="fitCenter"
-        android:layout_row="0"
-        android:layout_column="0"
-        android:layout_rowSpan="6" />
-    <TextView
-        local:MvxBind="Text Title"
-        android:textSize="20dip"
-        android:layout_row="0"
-        android:layout_column="1" />
-    <TextView
-        local:MvxBind="Text ReleaseDate"
-        android:textSize="14dip"
-        android:layout_row="1"
-        android:layout_column="1" />
-    <Space
-        android:layout_row="2"
-        android:layout_column="1"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
-    <TextView
-        local:MvxBind="Text Votes"
-        android:textSize="10dip"
-        android:layout_row="3"
-        android:layout_column="1" />
-    <Button
-        android:id="@+id/myButton"
-        android:text="Play Video"
-        android:layout_row="4"
-        android:layout_column="1" />
-    <Button
-        android:id="@+id/myButton2"
-        android:text="Save to Favorites"
-        android:layout_row="5"
-        android:layout_column="1" />
-    <TextView
-        local:MvxBind="Text Overview"
-        android:textSize="14dip"
-        android:layout_row="6"
-        android:layout_column="0"
-        android:layout_columnSpan="2" />
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:padding="10dp">
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:rowCount="6"
+        android:columnCount="2"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/detailMoviePhoto"
+            android:layout_width="120dp"
+            android:layout_height="180dp"
+            android:layout_marginRight="10dp"
+            android:scaleType="fitCenter"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_rowSpan="6" />
+        <TextView
+            local:MvxBind="Text Title"
+            android:textSize="20dip"
+            android:layout_row="0"
+            android:layout_column="1" />
+        <TextView
+            local:MvxBind="Text ReleaseDate"
+            android:textSize="14dip"
+            android:layout_row="1"
+            android:layout_column="1" />
+        <TextView
+            local:MvxBind="Text Rating"
+            android:textSize="14dip"
+            android:layout_row="2"
+            android:layout_column="1" />
+        <TextView
+            local:MvxBind="Text Votes"
+            android:textSize="10dip"
+            android:layout_row="3"
+            android:layout_column="1" />
+        <Button
+            android:id="@+id/myButton"
+            android:text="Play Video"
+            android:layout_row="4"
+            android:layout_column="1" />
+        <Button
+            android:id="@+id/myButton2"
+            android:text="Save to Favorites"
+            android:layout_row="5"
+            android:layout_column="1" />
+    </GridLayout>
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <TextView
+            local:MvxBind="Text Overview"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14dip" />
+    </ScrollView>
     <TextView
         android:text="Similar Movies"
-        android:textSize="20dip"
-        android:layout_row="7"
-        android:layout_column="0"
-        android:layout_columnSpan="2" />
-    <HorizontalScrollView
-        android:layout_row="8"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
-        android:scrollbars="none"
-        android:fillViewport="false"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dip" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/similar_recyclerView"
+        android:scrollbars="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp">
-        <LinearLayout
-            android:id="@+id/similar_movies"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </HorizontalScrollView>
-</GridLayout>
+        android:layout_marginBottom="10dp" />
+</LinearLayout>
