--- a/MovieExplorer.Droid/Resources/layout/MovieCell.axml
+++ b/MovieExplorer.Droid/Resources/layout/MovieCell.axml
@@ -6,12 +6,12 @@
     android:paddingRight="10dp">
     <ImageView
         android:id="@+id/movie_Photo"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
+        android:layout_width="80dp"
+        android:layout_height="120dp"
         android:layout_gravity="center_horizontal" />
-    <TextView
+<!--<TextView
         android:id="@+id/movie_Name"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:gravity="center" />-->
 </LinearLayout>
