--- a/MovieExplorer.Droid/Resources/layout/MainView.axml
+++ b/MovieExplorer.Droid/Resources/layout/MainView.axml
@@ -10,11 +10,11 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
-        <!--<Button
-            android:id="@+id/SearchButton"
+        <Button
+            android:text="@string/Search"
+            local:MvxBind="Click GoToSearch"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"-->
-            android:text="@string/Search" />
+            android:layout_height="wrap_content" />
         <TextView
             android:text="@string/TopRated"
             android:textAppearance="?android:attr/textAppearanceMedium"
