Implemented Favorites View.  Now it's just a matter of cleaning things up and making things look nice.

--- a/MovieExplorer.Droid/Resources/layout/DetailView.axml
+++ b/MovieExplorer.Droid/Resources/layout/DetailView.axml
@@ -41,12 +41,11 @@
             android:layout_row="3"
             android:layout_column="1" />
         <Button
-            android:id="@+id/myButton"
             android:text="Play Video"
             android:layout_row="4"
             android:layout_column="1" />
         <Button
-            android:id="@+id/myButton2"
+            local:MvxBind="Click SaveFavoriteMovie"
             android:text="Save to Favorites"
             android:layout_row="5"
             android:layout_column="1" />
