--- a/MovieExplorer.Droid/Resources/layout/DetailView.axml
+++ b/MovieExplorer.Droid/Resources/layout/DetailView.axml
@@ -1,75 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="10dp">
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:rowCount="6"
-        android:columnCount="2"
-        android:orientation="vertical">
-        <ImageView
-            android:id="@+id/detailMoviePhoto"
-            android:layout_width="120dp"
-            android:layout_height="180dp"
-            android:layout_marginRight="10dp"
-            android:scaleType="fitCenter"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_rowSpan="6" />
-        <TextView
-            local:MvxBind="Text Title"
-            android:textSize="20dip"
-            android:layout_row="0"
-            android:layout_column="1" />
-        <TextView
-            local:MvxBind="Text ReleaseDate"
-            android:textSize="14dip"
-            android:layout_row="1"
-            android:layout_column="1" />
-        <TextView
-            local:MvxBind="Text Rating"
-            android:textSize="14dip"
-            android:layout_row="2"
-            android:layout_column="1" />
-        <TextView
-            local:MvxBind="Text Votes"
-            android:textSize="10dip"
-            android:layout_row="3"
-            android:layout_column="1" />
-        <Button
-            android:text="Play Video"
-            android:layout_row="4"
-            android:layout_column="1" />
-        <Button
-            local:MvxBind="Click SaveFavoriteMovie"
-            android:text="Save to Favorites"
-            android:layout_row="5"
-            android:layout_column="1" />
-    </GridLayout>
-    <ScrollView
+    android:layout_height="fill_parent">
+    <include
+        android:id="@+id/detail_toolbar"
+        layout="@layout/toolbar" />
+    <LinearLayout
+        android:layout_below="@id/detail_toolbar"
+        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="fill_parent"
+        android:padding="10dp">
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:rowCount="6"
+            android:columnCount="2"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/detailMoviePhoto"
+                android:layout_width="120dp"
+                android:layout_height="180dp"
+                android:layout_marginRight="10dp"
+                android:scaleType="fitCenter"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_rowSpan="6" />
+            <TextView
+                local:MvxBind="Text Title"
+                android:textSize="20dip"
+                android:layout_row="0"
+                android:layout_column="1" />
+            <TextView
+                local:MvxBind="Text ReleaseDate"
+                android:textSize="14dip"
+                android:layout_row="1"
+                android:layout_column="1" />
+            <TextView
+                local:MvxBind="Text Rating"
+                android:textSize="14dip"
+                android:layout_row="2"
+                android:layout_column="1" />
+            <TextView
+                local:MvxBind="Text Votes"
+                android:textSize="10dip"
+                android:layout_row="3"
+                android:layout_column="1" />
+            <Button
+                android:text="Play Video"
+                android:layout_row="4"
+                android:layout_column="1" />
+            <Button
+                local:MvxBind="Click SaveFavoriteMovie"
+                android:text="Save to Favorites"
+                android:layout_row="5"
+                android:layout_column="1" />
+        </GridLayout>
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+            <TextView
+                local:MvxBind="Text Overview"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:textSize="14dip" />
+        </ScrollView>
         <TextView
-            local:MvxBind="Text Overview"
+            android:text="Similar Movies"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="14dip" />
-    </ScrollView>
-    <TextView
-        android:text="Similar Movies"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20dip" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/similar_recyclerView"
-        android:scrollbars="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp" />
-</LinearLayout>
+            android:textSize="20dip" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/similar_recyclerView"
+            android:scrollbars="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp" />
+    </LinearLayout>
+</RelativeLayout>
