--- a/MovieExplorer.Droid/Resources/layout/FavoritesView.axml
+++ b/MovieExplorer.Droid/Resources/layout/FavoritesView.axml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="10dp">
+    android:layout_height="fill_parent">
+    <include
+        android:id="@+id/favorites_toolbar"
+        layout="@layout/toolbar" />
     <android.support.v7.widget.RecyclerView
+        android:layout_below="@id/favorites_toolbar"
         android:id="@+id/favorites_recyclerView"
         android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" />
-</LinearLayout>
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
+</RelativeLayout>
