--- a/MovieExplorer.Droid/Resources/layout/toolbar.axml
+++ b/MovieExplorer.Droid/Resources/layout/toolbar.axml
@@ -7,4 +7,4 @@
     android:minHeight="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    app:popupTheme="@style/ThemeOverlay.AppCompat" />
