--- a/MovieExplorer.Droid/Resources/layout/DetailView.axml
+++ b/MovieExplorer.Droid/Resources/layout/DetailView.axml
@@ -15,7 +15,7 @@
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:rowCount="6"
+            android:rowCount="5"
             android:columnCount="2"
             android:orientation="vertical">
             <ImageView
@@ -26,7 +26,7 @@
                 android:scaleType="fitCenter"
                 android:layout_row="0"
                 android:layout_column="0"
-                android:layout_rowSpan="6" />
+                android:layout_rowSpan="5" />
             <TextView
                 local:MvxBind="Text Title"
                 android:textSize="20dip"
@@ -37,25 +37,34 @@
                 android:textSize="14dip"
                 android:layout_row="1"
                 android:layout_column="1" />
-            <TextView
-                local:MvxBind="Text Rating"
-                android:textSize="14dip"
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_row="2"
-                android:layout_column="1" />
+                android:layout_column="1">
+                <ImageView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/star" />
+                <TextView
+                    local:MvxBind="Text Rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:textSize="14dip"
+                    android:gravity="center" />
+            </LinearLayout>
             <TextView
                 local:MvxBind="Text Votes"
                 android:textSize="10dip"
                 android:layout_row="3"
                 android:layout_column="1" />
             <Button
-                android:text="Play Video"
+                local:MvxBind="Click FavoriteButtonClick; Text FavoriteButtonText"
                 android:layout_row="4"
-                android:layout_column="1" />
-            <Button
-                local:MvxBind="Click SaveFavoriteMovie"
-                android:text="Save to Favorites"
-                android:layout_row="5"
-                android:layout_column="1" />
+                android:layout_column="1"
+                android:layout_gravity="bottom" />
         </GridLayout>
         <ScrollView
             android:layout_width="fill_parent"
@@ -65,8 +74,8 @@
                 local:MvxBind="Text Overview"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:textSize="14dip" />
         </ScrollView>
         <TextView
@@ -78,8 +87,6 @@
             android:id="@+id/similar_recyclerView"
             android:scrollbars="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
