--- a/MovieExplorer.Droid/Resources/layout/MainView.axml
+++ b/MovieExplorer.Droid/Resources/layout/MainView.axml
@@ -11,52 +11,65 @@
         android:layout_below="@id/toolbar"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-        <ScrollView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:scrollbars="none"
-            android:padding="10dp">
+            android:layout_height="wrap_content">
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
                 <TextView
                     android:text="@string/TopRated"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingTop="5dp"
+                    android:paddingLeft="10dp" />
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/topRated_recyclerView"
                     android:scrollbars="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_height="0dp"
+                    android:layout_weight="1.0" />
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
                 <TextView
                     android:text="@string/Popular"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp" />
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/popular_recyclerView"
                     android:scrollbars="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_height="0dp"
+                    android:layout_weight="1.0" />
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
                 <TextView
                     android:text="@string/NowPlaying"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp" />
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/nowPlaying_recyclerView"
                     android:scrollbars="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_height="0dp"
+                    android:layout_weight="1.0" />
             </LinearLayout>
-        </ScrollView>
+        </LinearLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
