--- a/MovieExplorer.Droid/Resources/layout/MovieCell.axml
+++ b/MovieExplorer.Droid/Resources/layout/MovieCell.axml
@@ -1,17 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/movie_Photo"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingRight="10dp">
-    <ImageView
-        android:id="@+id/movie_Photo"
-        android:layout_width="80dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center_horizontal" />
-<!--<TextView
-        android:id="@+id/movie_Name"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:gravity="center" />-->
-</LinearLayout>
+    android:layout_height="fill_parent"
+    android:padding="5dp" />
